--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,8 @@
-
+@import "custom";
+@import "variables";
+@import "bootstrap/mixins";
 
 
 @import "custom/main";
 @import "custom/card";
+@import "custom/comments";
