--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .bw {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -7,5 +8,212 @@
   background-color: #3097D1;
   background-image: -webkit-linear-gradient(top, #216a94, #3097D1);
   background-image: linear-gradient(to bottom, #216a94, #3097D1); }
+
+ul.posts-list li a,
+.posts-card .card-title a,
+.posts-card .card-text a,
+.entry-title a {
+  color: #292b2c;
+  text-decoration: none;
+  transition: all 0.3s ease; }
+  ul.posts-list li a:focus, ul.posts-list li a:hover,
+  .posts-card .card-title a:focus,
+  .posts-card .card-title a:hover,
+  .posts-card .card-text a:focus,
+  .posts-card .card-text a:hover,
+  .entry-title a:focus,
+  .entry-title a:hover {
+    color: #0275d8;
+    text-decoration: none; }
+
+.entry-header::after {
+  display: block;
+  width: 160px;
+  height: 4px;
+  border-radius: 3px;
+  background: #efefef;
+  content: "";
+  margin-top: 1rem; }
+
+.entry-meta {
+  color: #999; }
+  .entry-meta a {
+    color: #999;
+    text-decoration: none;
+    transition: all 0.3s ease; }
+    .entry-meta a:focus, .entry-meta a:hover {
+      color: #0275d8;
+      text-decoration: none; }
+
+.border-0 {
+  border: 0; }
+
+.pd-0 {
+  padding: 0; }
+
+@media (min-width: 1200px) {
+  .post-thumbnail {
+    width: 250px; } }
+.entry {
+  padding-top: 1rem;
+  padding-bottom: 1rem; }
+
+.card .card-block ul {
+  margin-bottom: 0; }
+
+.text-overflow-ellipsis, ul.posts-list li {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis; }
+
+.sidebar .card {
+  margin-bottom: 1rem; }
+
+blockquote,
+.blockquote {
+  background: #f9f9f9;
+  border-left: 10px solid #ccc;
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
+  font-size: 1rem;
+  quotes: "“" "”" "‘" "’"; }
+
+blockquote::before,
+.blockquote::before {
+  color: #ccc;
+  content: open-quote;
+  font-size: 4em;
+  line-height: 0.1em;
+  margin-right: 0.25em;
+  vertical-align: -0.4em; }
+
+.card-header {
+  background-color: #fff; }
+
+/**
+ * 11.4 - Comments
+ */
+.comments-area {
+  margin: 0; }
+
+.comment-respond {
+  margin-bottom: 1rem; }
+
+.comment-list + .comment-respond,
+.comment-navigation + .comment-respond {
+  padding-top: 1rem; }
+
+.comments-title {
+  margin-bottom: 1rem; }
+
+.comment-list {
+  list-style: none;
+  margin: 0;
+  padding-left: 0; }
+  .comment-list article,
+  .comment-list .pingback,
+  .comment-list .trackback {
+    border-bottom: 1px solid #d1d1d1;
+    padding: 1rem 0; }
+  .comment-list .children {
+    list-style: none;
+    margin: 0; }
+
+.comment-author {
+  color: #1a1a1a;
+  margin-bottom: 0.4375em; }
+  .comment-author .avatar {
+    float: left;
+    height: 28px;
+    margin-right: 0.875em;
+    position: relative;
+    width: 28px; }
+
+.comment-meta {
+  font-size: .85rem; }
+
+.comment-metadata,
+.pingback .edit-link {
+  color: #999; }
+
+.comment-metadata {
+  margin-bottom: .5rem; }
+
+.comment-metadata a,
+.pingback .comment-edit-link {
+  color: #999; }
+
+.comment-metadata a:hover,
+.comment-metadata a:focus,
+.pingback .comment-edit-link:hover,
+.pingback .comment-edit-link:focus {
+  color: #007acc; }
+
+.comment-metadata .edit-link,
+.pingback .edit-link {
+  display: inline-block; }
+
+.comment-content {
+  color: #666;
+  font-size: .85rem; }
+  .comment-content ul,
+  .comment-content ol {
+    margin: 0 0 1.5em 1.25em; }
+  .comment-content li > ul,
+  .comment-content li > ol {
+    margin-bottom: 0; }
+
+.comment-form {
+  padding-top: .5rem; }
+  .comment-form label {
+    color: #686868;
+    display: block;
+    font-size: 13px;
+    font-size: 0.8125rem;
+    letter-spacing: 0.076923077em;
+    line-height: 1.6153846154;
+    margin-bottom: 0.5384615385em;
+    text-transform: uppercase; }
+
+.comment-list .comment-form {
+  padding-bottom: .5rem; }
+
+.comment-notes,
+.comment-awaiting-moderation,
+.logged-in-as,
+.form-allowed-tags {
+  color: #686868;
+  font-size: 13px;
+  font-size: 0.8125rem;
+  line-height: 1.6153846154;
+  margin-bottom: 2.1538461538em; }
+
+.no-comments {
+  border-top: 1px solid #d1d1d1;
+  font-weight: 700;
+  margin: 0;
+  padding-top: 1.75em; }
+
+.comment-navigation + .no-comments {
+  border-top: 0;
+  padding-top: 0; }
+
+.form-allowed-tags code {
+  font-family: Inconsolata, monospace; }
+
+.required {
+  color: #007acc; }
+
+.comment-reply-title {
+  margin-top: 1rem; }
+  .comment-reply-title small {
+    font-size: 100%; }
+  .comment-reply-title small a {
+    border: 0;
+    float: right;
+    overflow: hidden; }
+  .comment-reply-title small a:hover,
+  .comment-reply-title small a:focus {
+    color: #1a1a1a; }
 
 /*# sourceMappingURL=style.css.map */
