--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -6,8 +6,8 @@
  */
 
 // Core variables and mixins
-//@import "variables";
 @import "custom";
+@import "variables";
 @import "bootstrap/mixins";
 
 
