--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,6 +3,7 @@
 @import "bootstrap/mixins";
 
 
-@import "custom/main";
-@import "custom/card";
-@import "custom/comments";
+@import "custom/lean-main";
+@import "custom/lean-card";
+@import "custom/lean-comments";
+@import "custom/lean-utilities";
