--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -11,4 +11,4 @@ $font-size-h6: .85rem !default;
 $grid-gutter-width-base:     20px !default; //重新设置 列 宽度
 
 $card-columns-count:        3 !default;
-$card-columns-gap:          1.25rem !default;
+$card-columns-gap:          .65rem !default;
