--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,7 +3,10 @@
 @import "bootstrap/mixins";
 
 
+@import "custom/lean-dropdown";
 @import "custom/lean-main";
 @import "custom/lean-card";
 @import "custom/lean-comments";
+@import "custom/lean-entry";
+@import "custom/lean-image";
 @import "custom/lean-utilities";
