--- a/scss/custom/_lean-card.scss
+++ b/scss/custom/_lean-card.scss
@@ -5,3 +5,11 @@
 .card {
   //box-shadow: 0 1px 3px rgba(0, 0, 0, .3);
 }
+
+.card {
+  .card-block {
+    ul {
+      margin-bottom: 0; //覆盖默认的1re
+    }
+  }
+}
