--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,4 +9,5 @@
 @import "custom/lean-comments";
 @import "custom/lean-entry";
 @import "custom/lean-image";
+@import "custom/lean-corner";
 @import "custom/lean-utilities";
