--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,6 +80,33 @@ blockquote::before,
 .card .card-block ul {
   margin-bottom: 0; }
 
+.card-img-overlay-bottom {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 1.25rem;
+  background: rgba(5, 5, 5, 0.4); }
+
+.card-inverse {
+  color: rgba(255, 255, 255, 0.65); }
+  .card-inverse .card-header,
+  .card-inverse .card-footer {
+    background-color: transparent;
+    border-color: rgba(255, 255, 255, 0.2); }
+  .card-inverse .card-header,
+  .card-inverse .card-footer,
+  .card-inverse .card-title,
+  .card-inverse .card-blockquote {
+    color: #fff; }
+  .card-inverse .card-link,
+  .card-inverse .card-text,
+  .card-inverse .card-subtitle,
+  .card-inverse .card-blockquote .blockquote-footer {
+    color: rgba(255, 255, 255, 0.65); }
+  .card-inverse .card-link:focus, .card-inverse .card-link:hover {
+    color: #fff; }
+
 /**
  * 11.4 - Comments
  */
@@ -269,36 +296,99 @@ ul.posts-list li a,
 .card-img-top {
   width: 100%; }
 
-.thumbnail-medium,
-.thumbnail-large {
+.thumbnail-1,
+.thumbnail-2,
+.thumbnail-3,
+.thumbnail-4,
+.thumbnail-5,
+.thumbnail-5,
+.thumbnail-6,
+.thumbnail-7,
+.thumbnail-8,
+.thumbnail-9,
+.thumbnail-10,
+.thumbnail-11,
+.thumbnail-12 {
   overflow: hidden; }
 
-.thumbnail-medium {
-  width: 225px; }
+.thumbnail-1 {
+  width: 80px; }
 
-.thumbnail-medium img,
-.thumbnail-large img {
+.thumbnail-2 {
+  width: 180px; }
+
+.thumbnail-3 {
+  width: 280px; }
+
+.thumbnail-4 {
+  width: 380px; }
+
+.thumbnail-5 {
+  width: 480px; }
+
+.thumbnail-6 {
+  width: 580px; }
+
+.thumbnail-7 {
+  width: 680px; }
+
+.thumbnail-8 {
+  width: 780px; }
+
+.thumbnail-9 {
+  width: 880px; }
+
+.thumbnail-10 {
+  width: 980px; }
+
+.thumbnail-11 {
+  width: 1080px; }
+
+.thumbnail-12 {
+  width: 1180px; }
+
+.thumbnail-1 img,
+.thumbnail-2 img,
+.thumbnail-3 img,
+.thumbnail-4 img,
+.thumbnail-5 img,
+.thumbnail-5 img,
+.thumbnail-6 img,
+.thumbnail-7 img,
+.thumbnail-8 img,
+.thumbnail-9 img,
+.thumbnail-10 img,
+.thumbnail-11 img,
+.thumbnail-12 img {
   transition: all .5s ease; }
 
 .thumbnail-medium:hover img,
-.thumbnail-large:hover img {
+.thumbnail-large:hover img,
+.thumbnail-huge:hover img,
+.thumbnail-1:hover img,
+.thumbnail-2:hover img,
+.thumbnail-3:hover img,
+.thumbnail-4:hover img,
+.thumbnail-5:hover img,
+.thumbnail-5:hover img,
+.thumbnail-6:hover img,
+.thumbnail-7:hover img,
+.thumbnail-8:hover img,
+.thumbnail-9:hover img,
+.thumbnail-10:hover img,
+.thumbnail-11:hover img,
+.thumbnail-12:hover img {
   -webkit-transform: scale(1.1);
   -moz-transform: scale(1.1);
   transform: scale(1.1); }
 
-.img-box-tiny {
-  width: 90px; }
-
-.img-box-small {
-  width: 120px; }
-
-.img-box-tiny,
-.img-box-small {
+.thumbnail-1,
+.thumbnail-2 {
   height: auto;
   position: relative; }
 
-.img-box-tiny img,
-.img-box-small img {
+.thumbnail-1 img,
+.thumbnail-1 img {
   width: 100%;
   height: auto; }
 
