--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -8,6 +8,25 @@ $font-size-h5: .85rem !default;
 $font-size-h6: .85rem !default;
 
 
+// Grid containers
+//
+// Define the maximum width of `.container` for different screen sizes.
+
+$container-max-widths: (
+  sm: 540px,
+  md: 720px,
+  lg: 960px,
+  xl: 1200px
+) !default;
+
+
+// Grid columns
+//
+// Set the number of columns and specify the width of the gutters.
+
+$grid-columns:               12 !default;
+$grid-gutter-width-base:     20px !default;
+
 $grid-gutter-width-base:     20px !default; //重新设置 列 宽度
 
 $card-columns-count:        3 !default;
