--- a/scss/custom/_lean-card.scss
+++ b/scss/custom/_lean-card.scss
@@ -13,3 +13,43 @@
     }
   }
 }
+
+.card-img-overlay-bottom {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: $card-img-overlay-padding;
+  background: rgba(5, 5, 5, 0.4);
+}
+
+.card-inverse {
+  @include card-inverse;
+}
+
+@mixin card-inverse {
+  color: rgba(255,255,255,.65);
+
+  .card-header,
+  .card-footer {
+    background-color: transparent;
+    border-color: rgba(255,255,255,.2);
+  }
+  .card-header,
+  .card-footer,
+  .card-title,
+  .card-blockquote {
+    color: #fff;
+  }
+  .card-link,
+  .card-text,
+  .card-subtitle,
+  .card-blockquote .blockquote-footer {
+    color: rgba(255,255,255,.65);
+  }
+  .card-link {
+    @include hover-focus {
+      color: $card-link-hover-color;
+    }
+  }
+}
