--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -31,3 +31,19 @@ $grid-gutter-width-base:     20px !default; //重新设置 列 宽度
 
 $card-columns-count:        3 !default;
 $card-columns-gap:          .65rem !default;
+
+
+
+// Carousel
+
+$carousel-control-width:                      15% !default;
+$carousel-control-opacity:                    .5 !default;
+
+$carousel-indicator-width:                    30px !default;
+$carousel-indicator-height:                   3px !default;
+$carousel-indicator-spacer:                   3px !default;
+
+
+$carousel-caption-width:                      70% !default;
+
+$carousel-control-icon-width:                 20px !default;
