popper.js修复二级导航

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,7 +3,7 @@
 @import "bootstrap/mixins";
 
 
-@import "custom/lean-dropdown";
+//@import "custom/lean-dropdown";
 @import "custom/lean-main";
 @import "custom/lean-card";
 @import "custom/lean-comments";
