--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 $line-height-base: 1.8 !default;
 
 $font-size-h1: 1.8rem !default;
@@ -6,7 +8,6 @@ $font-size-h3: 1.2rem !default;
 $font-size-h4: 1rem !default;
 $font-size-h5: .85rem !default;
 $font-size-h6: .85rem !default;
-
 
 // Grid containers
 //
