--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,12 +2,12 @@
 @import "variables";
 @import "bootstrap/mixins";
 
-
-//@import "custom/lean-dropdown";
-@import "custom/lean-main";
-@import "custom/lean-card";
-@import "custom/lean-comments";
-@import "custom/lean-entry";
-@import "custom/lean-image";
-@import "custom/lean-corner";
-@import "custom/lean-utilities";
+@import "custom/buttons";
+@import "custom/dropdown";
+@import "custom/main";
+@import "custom/card";
+@import "custom/comments";
+@import "custom/entry";
+@import "custom/image";
+@import "custom/corner";
+@import "custom/utilities";
