--- a/scss/custom/_entry.scss
+++ b/scss/custom/_entry.scss
@@ -30,7 +30,17 @@ ul.posts-list li,
 }
 
 .entry-meta {
+  color: #999;
+  a {
+    color: #999;
+    text-decoration: $link-decoration;
+    transition: all 0.3s ease;
 
+    @include hover-focus {
+      color: $link-color;
+      text-decoration: $link-decoration;
+    }
+  }
 }
 
 .entry-header::after {
