--- a/scss/index.scss
+++ b/scss/index.scss
@@ -47,8 +47,22 @@
   }
 }
 
-.feature-list {
-  .media {
-    width: 25%;
+.feature-img {
+  font-size: 4rem;
+  line-height: 1.1;
+}
+
+
+
+.product-list {
+  margin-bottom: 40px;
+  .card {
+    float: left;
+    width: 33.333333%;
+    padding: 15px 30px;
+    border: 0;
+  }
+  .card-deck {
+    margin-bottom: 20px;
   }
 }
