--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,7 @@
 @import "variables";
 @import "bootstrap/mixins";
 
+@import "custom/layouts";
 @import "custom/buttons";
 @import "custom/dropdown";
 @import "custom/main";
