--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -7,6 +7,45 @@ $font-size-h4: 1rem !default;
 $font-size-h5: .85rem !default;
 $font-size-h6: .85rem !default;
 
+
+// Colors
+//
+// Grayscale and brand colors for use across Bootstrap.
+
+// Start with assigning color names to specific hex values.
+$white:  #fff !default;
+$black:  #000 !default;
+$red:    #d9534f !default;
+$orange: #f0ad4e !default;
+$yellow: #ffd500 !default;
+$green:  #5cb85c !default;
+$blue:   #0275d8 !default;
+$teal:   #5bc0de !default;
+$pink:   #ff5b77 !default;
+$purple: #613d7c !default;
+
+// Create grayscale
+$gray-dark:                 #292b2c !default;
+$gray:                      #464a4c !default;
+$gray-light:                #636c72 !default;
+$gray-lighter:              #eceeef !default;
+$gray-lightest:             #f7f7f9 !default;
+
+
+$border-width: 1px !default;
+
+$border-radius:          .25rem !default;
+$border-radius-lg:       .3rem !default;
+$border-radius-sm:       .2rem !default;
+
+// Reassign color vars to semantic color scheme
+$brand-primary:             $blue !default;
+$brand-success:             $green !default;
+$brand-info:                $teal !default;
+$brand-warning:             $orange !default;
+$brand-danger:              $red !default;
+$brand-inverse:             $gray-dark !default;
+
 // Grid containers
 //
 // Define the maximum width of `.container` for different screen sizes.
@@ -18,6 +57,8 @@ $container-max-widths: (
   xl: 1200px
 ) !default;
 
+$card-cap-bg:              #fff !default;
+$card-border-color:        rgba($black,.05) !default;
 
 // Grid columns
 //
