--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,9 @@
 body {
+  padding-top: 3.8rem;
   background-color: #f7f8fa; }
+
+.bg-white {
+  background-color: #fff; }
 
 .navbar-btn {
   margin-bottom: 0.05rem;
@@ -93,6 +97,12 @@ body {
   padding: 0 1.25rem 0.75rem 1.25rem;
   border-top: 0; }
 
+.card-excerpt {
+  margin-top: 1rem; }
+
+.card-excerpt:last-child {
+  margin-bottom: 0; }
+
 .card-meta,
 .card-footer {
   font-size: 85%;
@@ -113,11 +123,10 @@ body {
 
 .card-img-overlay-bottom {
   position: absolute;
-  bottom: 0;
-  left: 0;
   width: 100%;
+  bottom: 0;
   padding: 1.25rem;
-  background: rgba(5, 5, 5, 0.4); }
+  background-image: linear-gradient(rgba(4, 4, 4, 0.3), rgba(4, 4, 4, 0.3)); }
 
 .card-inverse {
   color: rgba(255, 255, 255, 0.65); }
@@ -270,6 +279,14 @@ body {
   .comment-reply-title small a:hover,
   .comment-reply-title small a:focus {
     color: #1a1a1a; }
+
+.single-header {
+  border-top-left-radius: calc(0.25rem - 1px);
+  border-top-right-radius: calc(0.25rem - 1px);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.05); }
+
+.single-header-body {
+  padding: 1.25rem; }
 
 ul.posts-list li a,
 [class*="posts-card"] .card-title a,
