--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1,89 +1,1 @@
-$line-height-base: 1.8 !default;
-
-$font-size-h1: 1.8rem !default;
-$font-size-h2: 1.4rem !default;
-$font-size-h3: 1.2rem !default;
-$font-size-h4: 1rem !default;
-$font-size-h5: .85rem !default;
-$font-size-h6: .85rem !default;
-
-
-// Colors
-//
-// Grayscale and brand colors for use across Bootstrap.
-
-// Start with assigning color names to specific hex values.
-$white:  #fff !default;
-$black:  #000 !default;
-$red:    #d9534f !default;
-$orange: #f0ad4e !default;
-$yellow: #ffd500 !default;
-$green:  #5cb85c !default;
-$blue:   #0275d8 !default;
-$teal:   #5bc0de !default;
-$pink:   #ff5b77 !default;
-$purple: #613d7c !default;
-
-// Create grayscale
-$gray-dark:                 #292b2c !default;
-$gray:                      #464a4c !default;
-$gray-light:                #636c72 !default;
-$gray-lighter:              #eceeef !default;
-$gray-lightest:             #f7f7f9 !default;
-
-
-$border-width: 1px !default;
-
-$border-radius:          .25rem !default;
-$border-radius-lg:       .3rem !default;
-$border-radius-sm:       .2rem !default;
-
-// Reassign color vars to semantic color scheme
-$brand-primary:             $blue !default;
-$brand-success:             $green !default;
-$brand-info:                $teal !default;
-$brand-warning:             $orange !default;
-$brand-danger:              $red !default;
-$brand-inverse:             $gray-dark !default;
-
-// Grid containers
-//
-// Define the maximum width of `.container` for different screen sizes.
-
-$container-max-widths: (
-  sm: 540px,
-  md: 720px,
-  lg: 960px,
-  xl: 1200px
-) !default;
-
-$card-cap-bg:              #fff !default;
-$card-border-color:        rgba($black,.05) !default;
-
-// Grid columns
-//
-// Set the number of columns and specify the width of the gutters.
-
-$grid-columns:               12 !default;
-$grid-gutter-width-base:     20px !default;
-
-$grid-gutter-width-base:     20px !default; //重新设置 列 宽度
-
-$card-columns-count:        4 !default;
-$card-columns-gap:          .65rem !default;
-
-
-
-// Carousel
-
-$carousel-control-width:                      15% !default;
-$carousel-control-opacity:                    .5 !default;
-
-$carousel-indicator-width:                    30px !default;
-$carousel-indicator-height:                   3px !default;
-$carousel-indicator-spacer:                   3px !default;
-
-
-$carousel-caption-width:                      70% !default;
-
-$carousel-control-icon-width:                 20px !default;
+// custom
