--- a/scss/custom/_card.scss
+++ b/scss/custom/_card.scss
@@ -1,120 +1,1 @@
-.card-header {
-  // background-color: #fff;
-}
-
-.card {
-  width: 100%;
-  border: 1px solid #e7eaf1;
-  box-shadow: 0 1px 3px rgba(0, 37, 55, .05);
-  margin-bottom: 1rem;
-  .card-block {
-    ul {
-      margin-bottom: 0; //覆盖默认的1re
-    }
-  }
-}
-
-.card-title {
-  color: #333;
-  a {
-    color: #333;
-    text-decoration: $link-decoration;
-    transition: all 0.3s ease;
-
-    @include hover-focus {
-      color: $link-color;
-      text-decoration: $link-decoration;
-    }
-  }
-}
-
-.card-footer {
-  padding: 0 $card-spacer-x $card-spacer-y $card-spacer-x;
-  border-top: 0;
-}
-
-.card-excerpt {
-  margin-top: 1rem;
-}
-
-.card-excerpt:last-child {
-  margin-bottom: 0;
-}
-
-.card-meta,
-.card-footer {
-  font-size: 85%;
-  color: #999;
-  a {
-    color: #999;
-    text-decoration: $link-decoration;
-    transition: all 0.3s ease;
-
-    @include hover-focus {
-      color: $link-color;
-      text-decoration: $link-decoration;
-    }
-  }
-}
-
-.card-img-overlay {
-  // position: absolute;
-  // bottom: 0;
-  // left: 0;
-  // width: 100%;
-  // padding: $card-img-overlay-padding;
-  background: rgba(5, 5, 5, 0.4);
-}
-
-.card-img-overlay-bottom {
-  position: absolute;
-  width: 100%;
-  bottom: 0;
-  padding: $card-img-overlay-padding;
-  // background: rgba(4, 4, 4, 0.2);
-  background-image: linear-gradient(rgba(4,4,4,0.3),rgba(4,4,4,0.3));
-}
-
-.card-inverse {
-  @include card-inverse;
-  .card-title {
-    a {
-      color: #fff;
-      text-decoration: $link-decoration;
-      transition: all 0.3s ease;
-
-      @include hover-focus {
-        color: $link-color;
-        text-decoration: $link-decoration;
-      }
-    }
-  }
-}
-
-@mixin card-inverse {
-  color: rgba(255,255,255,.65);
-
-  .card-header,
-  .card-footer {
-    background-color: transparent;
-    border-color: rgba(255,255,255,.2);
-  }
-  .card-header,
-  .card-footer,
-  .card-title,
-  .card-blockquote {
-    color: #fff;
-  }
-
-  .card-link,
-  .card-text,
-  .card-subtitle,
-  .card-blockquote .blockquote-footer {
-    color: rgba(255,255,255,.65);
-  }
-  .card-link {
-    @include hover-focus {
-      color: $card-link-hover-color;
-    }
-  }
-}
+// card
