--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,6 +3,7 @@
 @import "bootstrap/mixins";
 
 @import "custom/layouts";
+@import "custom/link";
 @import "custom/buttons";
 @import "custom/dropdown";
 @import "custom/main";
